			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04j: *********************************

IMP: (4/13/06, GVG) Entering text (Bug #935). Implemented by adding a new item under EditMenu -> Text
so KeyBindings can be used.

BUG: (4/13/06, GVG) Fix for DRC redoing on already checked cells (Bug #931)
FIX: Inconsisten caching of stored dates if you switch from data on memory to data on disk.

BUG: (4/13/06, GVG) Fix for Error logger loading (Bug #933)
FIX: Inconsistent DTD header after changes in highlight.

BUG (4/13/06, DN): Exception in NetworkManager after cell deletion.
FIX: In NetworkManager.updateAll use "l" instead if "i" in "some cells deleted" loop, 

BUG (4/13/06, DN): Concurrent modification in redispaly (Bug #909, #923, #932).
FIX: PixelDrawing.forceRedraw collects changed cells in a Set.
    Caches are invalidated later in a Job.

BUG: (4/12/06, GVG) Editing a {doc} view getting database problems (Bug #930)
FIX: ChangedCellText added in TextWindow.

BUG: (4/12/06, GVG) Null exception in new MenBar if debug is false (Bug #929)
FIX: Skip item==null in EMenuBar constructor.

BUG: (4/12/06, DN) Lose keyboard input, when the very first window is closed (#Bug 890).
FIX: Menu template classes are implemented. They are llisteners of keyboard event.
    No dependency of very first window.

BUG: (4/11/06, GVG) Wiring problems in Schematics (Bug 926). Due to rounding issues,
startLoc.getX() == endLoc.getX() || startLoc.getY() == endLoc.getY() is never true in that particular case.
FIX: Condition using DBMath.

************************* Version 8.04i: *********************************

BUG: (4/11/06, DN) Batch output is too verbose.
FIX: In Main.UserInterfaceDummy.setProgressValue compare new procent with previous one.

IMP: (4/11/06, DN) Preparation for new revision of JELIB/DELIB format. It will happen in "8.04l".